solved layout bugs

--- a/style.css
+++ b/style.css
@@ -115,7 +115,6 @@ body {
   align-items: center;
 
   margin: 0em auto;
-  width: 374px;
 }
 
 /* SECTIONS */
@@ -123,16 +122,17 @@ body {
   border-radius: 0.5em;
   box-shadow: 3px 7px 20px hsla(0, 1%, 30%, 0.3);
   margin: 3em 1.5em;
+  width: 333px;
 }
 
 .upper-card {
   background-color: var(--clr-white);
   border-radius: 0.5em 0.5em 0 0;
-  padding: 1.75em 1.6em;
+  padding: 1.75em 1.75em;
 }
 
 .title {
-  margin-bottom: 0.85em;
+  margin-bottom: 1.25em;
 }
 
 .subtitle {
@@ -215,11 +215,10 @@ body {
 @media (min-width: 750px) {
   .container {
     height: 95%;
-    width: 100%;
   }
 
   .card {
-    max-width: 500px;
+    width: 650px;
   }
 
   .title {
@@ -256,10 +255,6 @@ body {
   .reasons {
     line-height: 1.5;
     opacity: 0.8;
-  }
-
-  .card {
-    max-width: 650px;
   }
 
   .upper-card {
